--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,6 +9,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Install node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: codegen
+        run: npm run codegen
+      - name: build
+        run: npm run build
+
 
       - name: Checkout private action repo
         uses: actions/checkout@v4
