--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: "npm"
+      - name: Install dependencies
+        run: npm install
       - name: codegen
         run: npm run codegen
       - name: build
