--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -29,7 +29,7 @@ jobs:
           path: .github/actions/goldsky-deploy
 
       - name: Run custom action
-        uses: ./.github/actions/goldsky-deploy
+        uses: actions/goldsky-deploy@v1.0.0
         with:
           api_key: ${{ secrets.GOLDSKY_API_KEY }}
           subgraph_name: "ethereum-blocks"
